Optimization on time window
When less then three user could move timewindow from game timestamp to
current timestemp.
